[tool.poetry]
name = "oarepo-ui"
version = "4.0.0"
description = "UI module for invenio 3.5+"
authors = ["Mirek Simek <miroslav.simek@vscht.cz>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
invenio-records-resources = "^0.19.1"

[tool.poetry.dev-dependencies]
invenio = {version = ">=3.5.0a4", extras = ["db", "elasticsearch7"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.'invenio_base.apps']
oarepo_ui = "oarepo_ui.ext:OARepoUIExtension"

[tool.poetry.plugins.'invenio_base.api_apps']
oarepo_ui = "oarepo_ui.ext:OARepoUIExtension"

[tool.poetry.plugins."oarepo_ui.extensions"]
default = "oarepo_ui._components:DefaultUIExtensionConfig"

[tool.poetry.plugins."invenio_i18n.translations"]
messages = "oarepo_ui"

[tool.poetry.plugins."invenio_assets.webpack"]
oarepo_ui_theme = "oarepo_ui.theme.webpack:theme"
