[project]
name = "oarepo-ui"
version = "8.0.0"
description = "UI module for invenio 3.5+"
readme = "README.md"
license = "MIT"
dependencies = [
    "oarepo[rdm,tests]>=14,<15",
    "jinja2-simple-tags",
    "frozendict",
    "jinjax>=0.60,<1.0.0",
    "deepmerge>=2.0",
    "python-dotenv>=1.1.1",
    "oarepo-runtime>=3.0.0,<4.0.0",
    "oarepo-theme>=2.0.0,<3.0.0",

    # invenio dependencies
    "invenio-app-rdm>=14.0.0b0,<15.0.0",
    "invenio-search>=3.0.0,<4.0.0",
]
requires-python = ">=3.14,<3.15"

[project.urls]
Homepage = "https://github.com/oarepo/oarepo-ui"


[project.optional-dependencies]
dev = [
    "pytest>=7.1.2",
    "oarepo-invenio-typing-stubs",
]
tests = [
    "pytest>=7.1.2",
    "oarepo-model>=1.0.0,<2.0.0",
    "pytest-oarepo>=3.0.0,<4.0.0",
]
workflows = [
    "oarepo-workflows",
]
oarepo14= [
    "oarepo>=14.0.0,<15.0.0"
]


[project.entry-points."invenio_base.apps"]
oarepo_ui = "oarepo_ui.ext:OARepoUIExtension"

[project.entry-points."oarepo_ui.extensions"]
default = "oarepo_ui._components:DefaultUIExtensionConfig"

[project.entry-points."invenio_i18n.translations"]
oarepo_ui_messages = "oarepo_ui"

[project.entry-points."invenio_assets.webpack"]
oarepo_ui_theme = "oarepo_ui.theme.webpack:theme"

[project.entry-points."invenio_base.blueprints"]
oarepo_ui = "oarepo_ui.views:create_blueprint"

[project.entry-points."invenio_base.finalize_app"]
oarepo_ui = "oarepo_ui.views:finalize_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/oarepo_ui",
]

[tool.pytest.ini_options]
    testpaths = [
        "tests"
    ]

[tool.hatch.metadata]
allow-direct-references = true
