
[metadata]
name = oarepo-ui
version = attr: oarepo_ui.__version__
description = UI module for invenio 3.5+
long_description = file: README.md
long_description_content_type = text/markdown
keywords = oarepo ui
license = MIT
author = Mirek Simek
author_email = miroslav.simek@vscht.cz
platforms = any
url = https://github.com/oarepo/oarepo-ui
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires =
    Babel>=2.8
    Flask>=2.1.2
    invenio-records-resources>=0.19.1


[options.extras_require]
tests =
     invenio-db>=1.0.8
     invenio-search[elasticsearch7]>=1.4.2,<1.5.0

[options.entry_points]
invenio_base.apps =
    oarepo_ui = oarepo_ui.ext:OARepoUIExtension
invenio_base.api_apps =
    oarepo_ui = oarepo_ui.ext:OARepoUIExtension
oarepo_ui.extensions =
    default = oarepo_ui._components:DefaultUIExtensionConfig
invenio_i18n.translations =
    oarepo_ui_messages = oarepo_ui
invenio_assets.webpack =
    oarepo_ui_theme = oarepo_ui.theme.webpack:theme
