

[metadata]
name = oarepo-ui-model-builder
version = 2.0.0
description = Model builder plugin for oarepo-ui
authors = 


[options]
python = >=3.10,<4.0
install_requires =
    langcodes>=3.3.0
    oarepo-model-builder>=3.0.0

[options.extras_require]
tests =
    pytest>=7
    pytest-invenio
    oarepo>=11.0.0

[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2


[options.entry_points]

oarepo_model_builder.profiles =
    ui = oarepo_model_builder_ui.profiles:UIProfile