

[metadata]
name = oarepo-ui-model-builder
version = 2.0.0
description = Model builder plugin for oarepo-ui
authors = 


[options]
python = >=3.10,<4.0
install_requires =
    langcodes>=3.3.0
    oarepo-model-builder>=3.0.0
    polib

[options.extras_require]
tests =
    pytest>=7

[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2


[options.entry_points]
oarepo_model_builder.validation = 
    ui-validation = oarepo_model_builder_ui.validation:validators

oarepo_model_builder.builders.model =
    4000-oarepo-i18n = oarepo_model_builder_ui.invenio.i18n:InvenioI18nBuilder
    4010-oarepo-i18n-setup = oarepo_model_builder_ui.invenio.i18n_setup_cfg:InvenioI18NSetupCfgBuilder

oarepo_model_builder.outputs =
    po  = oarepo_model_builder_ui.outputs.i18n:POOutput

oarepo_model_builder.model_preprocessors.model =
    50-oarepo-ui  = oarepo_model_builder_ui.model_preprocessors.layout_settings:LayoutSettingsPreprocessor
