

[metadata]
name = oarepo-ui-model-builder
version = attr:oarepo_ui_model_builder.__version__
description = Model builder plugin for oarepo-ui
authors =


[options]
python = >=3.9
install_requires =
    oarepo-model-builder

[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2


[options.entry_points]
oarepo_ui =
oarepo.models =
    oarepo-ui = oarepo_ui_model_builder.models:model.yaml

