

[metadata]
name = oarepo-ui-model-builder
version = attr:oarepo_ui_model_builder.__version__
description = Model builder plugin for oarepo-ui
authors =


[options]
python = >=3.10,<4.0
install_requires =
    langcodes>=3.3.0
    oarepo-model-builder>=0.9.24


[options.extras_require]
tests =
    pytest>=7<8
    pytest-invenio
    invenio==3.4.1

[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2


[options.entry_points]
oarepo_ui =
    span = oarepo_ui_model_builder.ui_components_specs:SpanComponent
    separator = oarepo_ui_model_builder.ui_components_specs:SeparatorComponent
    segment = oarepo_ui_model_builder.ui_components_specs:SegmentComponent
    row = oarepo_ui_model_builder.ui_components_specs:RowComponent
    raw = oarepo_ui_model_builder.ui_components_specs:RawComponent
    list = oarepo_ui_model_builder.ui_components_specs:ListComponent
    link = oarepo_ui_model_builder.ui_components_specs:LinkComponent
    label = oarepo_ui_model_builder.ui_components_specs:LabelComponent
    icon = oarepo_ui_model_builder.ui_components_specs:IconComponent
    header = oarepo_ui_model_builder.ui_components_specs:HeaderComponent
    grid = oarepo_ui_model_builder.ui_components_specs:GridComponent
    divided-row = oarepo_ui_model_builder.ui_components_specs:DividedRowComponent
    container = oarepo_ui_model_builder.ui_components_specs:ContainerComponent
    column = oarepo_ui_model_builder.ui_components_specs:ColumnComponent
    button = oarepo_ui_model_builder.ui_components_specs:ButtonComponent
oarepo.models =
    oarepo-ui = oarepo_ui_model_builder.models:model.yaml
oarepo_model_builder.builders =
    1050-layout-data = oarepo_ui_model_builder.invenio.invenio_layout_data:InvenioLayoutBuilder
oarepo_model_builder.model_preprocessors =
    30-layout = oarepo_ui_model_builder.model_preprocessors.layout_settings:LayoutSettingsPreprocessor
oarepo_model_builder.outputs =
    layout = oarepo_ui_model_builder.outputs.layout:LayoutOutput
oarepo.model_schemas =
    layout_jsonschema = oarepo_ui_model_builder:layout_jsonschema.json5
    layout_settings = oarepo_ui_model_builder:layout_settings.json5
