
[metadata]
name = oarepo-ui
version = attr: oarepo_ui.__version__
description = UI module for invenio 3.5+
long_description = file: README.md
long_description_content_type = text/markdown
keywords = oarepo ui
license = MIT
author = Mirek Simek
author_email = miroslav.simek@vscht.cz
platforms = any
url = https://github.com/oarepo/oarepo-ui
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires =
    Flask>=2.1.2
    invenio-records-resources>=0.19.1
    importlib-metadata>=4.11.4
    oarepo-generated-ui>=1.0.4
    invenio-search-ui>=2.2.0,<3.0.0
    Flask-Babelex
    marshmallow-utils
    invenio-i18n

[options.extras_require]
tests =
    pytest-invenio
    oarepo>=11,<12

[options.entry_points]
oarepo_ui =
    span = oarepo_ui.ui_components_specs:SpanComponent
    separator = oarepo_ui.ui_components_specs:SeparatorComponent
    segment = oarepo_ui.ui_components_specs:SegmentComponent
    row = oarepo_ui.ui_components_specs:RowComponent
    raw = oarepo_ui.ui_components_specs:RawComponent
    list = oarepo_ui.ui_components_specs:ListComponent
    link = oarepo_ui.ui_components_specs:LinkComponent
    label = oarepo_ui.ui_components_specs:LabelComponent
    icon = oarepo_ui.ui_components_specs:IconComponent
    header = oarepo_ui.ui_components_specs:HeaderComponent
    grid = oarepo_ui.ui_components_specs:GridComponent
    divided-row = oarepo_ui.ui_components_specs:DividedRowComponent
    container = oarepo_ui.ui_components_specs:ContainerComponent
    column = oarepo_ui.ui_components_specs:ColumnComponent
    button = oarepo_ui.ui_components_specs:ButtonComponent
invenio_base.apps =
    oarepo_ui = oarepo_ui.ext:OARepoUIExtension
invenio_base.api_apps =
    oarepo_ui = oarepo_ui.ext:OARepoUIExtension
oarepo_ui.extensions =
    default = oarepo_ui._components:DefaultUIExtensionConfig
invenio_i18n.translations =
    oarepo_ui_messages = oarepo_ui
invenio_assets.webpack =
    oarepo_ui_theme = oarepo_ui.theme.webpack:theme


[bdist_wheel]
universal = 1

[compile_catalog]
directory = oarepo_ui/translations/

[extract_messages]
copyright_holder = CESNET
msgid_bugs_address = info@oarepo.org
mapping-file = babel.ini
output-file = oarepo_ui/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = oarepo_ui/translations/messages.pot
output-dir = oarepo_ui/translations/

[update_catalog]
input-file = oarepo_ui/translations/messages.pot
output-dir = oarepo_ui/translations/

[pydocstyle]
add_ignore = D401
