

[metadata]
name = mock-record
version = 1.0.0
description = A sample application for mock_record
authors = 


[options]
python = >=3.9
install_requires =
    invenio_access>=1.4.4
    invenio_app>=1.3.4
    invenio_db>=1.0.14
    invenio_pidstore>=1.2.3
    invenio_records>=2.0.0
    invenio-records-rest>=2.1.0
    invenio_records_permissions>=0.13.0
    invenio_records_resources>=0.21.4
    invenio-search>=2.1.0
    tqdm>=4.64.1
    oarepo-runtime>=1.0.0
packages = find:


[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2


[options.entry_points]
invenio_base.api_apps = mock_record = mock_record.ext:MockRecordExt
invenio_base.apps = mock_record = mock_record.ext:MockRecordExt
invenio_db.alembic = mock_record = mock_record:alembic
invenio_db.models = mock_record = mock_record.records.models
invenio_base.api_blueprints = mock_record = mock_record.views:create_blueprint_from_app_mock_record
invenio_search.mappings = mock_record = mock_record.records.mappings
invenio_jsonschemas.schemas = mock_record = mock_record.records.jsonschemas
oarepo.models = mock_record = mock_record.models:model.json
flask.commands = mock_record = mock_record.cli:group
invenio_i18n.translations = mock_record = mock_record
